SOmething more or less working

--- a/app/views/metrics/edit.html.erb
+++ b/app/views/metrics/edit.html.erb
@@ -1,4 +1,7 @@
-<h1>Editing metric</h1>
+<% content_for :title do %>
+  Editing: <%=h @metric.name %>
+<% end %>
+
 
 <% form_for(@metric) do |f| %>
   <%= f.error_messages %>
@@ -11,9 +14,22 @@
     <%= f.label :key %><br />
     <%= f.text_field :key %>
   </p>
+   <% f.fields_for :data_units do |data_point_form| %>
+      <p>
+        <%= f.label :data_point  %>
+      </p>
+      <p>
+        <div>
+          <%= data_point_form.text_field :data_point%>
+        </div>
+
+      </p>
+    <% end %>
+
   <p>
     <%= f.submit 'Update' %>
   </p>
+
 <% end %>
 
 <%= link_to 'Show', @metric %> |
