--- a/app/views/metrics/new.html.erb
+++ b/app/views/metrics/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New metric</h1>
+<% content_for :title do %>
+  New metric:
+<% end %>
 
 <% form_for(@metric) do |f| %>
   <%= f.error_messages %>
