Bunch of new functionalities and removed files that shouldn't be versionned.

--- a/app/views/metrics/edit.html.erb
+++ b/app/views/metrics/edit.html.erb
@@ -21,6 +21,7 @@
       <p>
         <div>
           <%= data_point_form.text_field :data_point%>
+          <%= data_point_form.text_field :when %>
         </div>
 
       </p>
