--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -2,18 +2,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <title>Easy Metric</title>
+    <title>Easy Metric - <%= yield :title %></title>
     <%= stylesheet_link_tag "style"%>
   </head>
 
   <body>
     <div id="wrapper">
       <div id="branding">
-        <h1 class="logo"><a href="#" title="&lt; Easy Metric /&gt;"> Easy Metric </a></h1>
+        <h1 class="logo"><a href="/" title="&lt; Easy Metric /&gt;"> Easy Metric </a></h1>
         <ul class="topNav">
-          <li><a href="#" class="topNavAct">Get Started</a></li>
+          <li><a href="/" class="topNavAct">Get Started</a></li>
+          <li><%=link_to "Documentation", :controller=>"documentation"%></li>
+          <li><%=link_to "About", :controller=>"about"%></li>
           <!---
-          <li><a href="#">Get Started</li>
             <li><a href="#">HUMOR</a></li>
             <li><a href="#">FICTION &amp; POETRY</a></li>
             <li><a href="#">THE TALK OF THE TOWN</a></li>
