File modified locally

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -36,6 +36,8 @@
               <br class="clear bottomClear" />
 
               <%= yield %>
+              <div id="footer">
+              </div>
             </div>
           </div>
         </div>
