--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -11,18 +11,10 @@
       <div id="branding">
         <h1 class="logo"><a href="/" title="&lt; Easy Metric /&gt;"> Easy Metric </a></h1>
         <ul class="topNav">
-          <li><a href="/" class="topNavAct">Get Started</a></li>
+          <li><a href="/" class="topNavAct">Dashboard</a></li>
+          <li><%=link_to "All Metrics", :controller=>"metrics"%></li>
           <li><%=link_to "Documentation", :controller=>"documentation"%></li>
           <li><%=link_to "About", :controller=>"about"%></li>
-          <!---
-            <li><a href="#">HUMOR</a></li>
-            <li><a href="#">FICTION &amp; POETRY</a></li>
-            <li><a href="#">THE TALK OF THE TOWN</a></li>
-            <li><a href="#">ONLINE ONLY</a></li>
-            <li><a href="#">SUBSCRIBE</a></li>
-            <li><a href="#">ABOUT US</a></li>
-            <li><a href="#">ARCHIVE</a></li>
-            -->
 
           </ul><br class="clear" />
         </div>
